[package]
name = "dohl"
version = "0.0.1"
edition = "2024"
description = "SIMD optimized 64-bit hash lib built on WyHash."
license = "Apache-2.0"
repository = "https://github.com/frozen-lab/dohl"
readme = "README.md"
keywords = ["hash", "hasher", "xxhash3", "entropy"]
categories = ["algorithms"]
exclude = ["shell.nix"]

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"

[profile.profile]
inherits = "release"
debug = true
lto = "off"
opt-level = 2
codegen-units = 1
debug-assertions = false
overflow-checks = false
strip = "none"

